<resources>
    <string name="app_name">포토 다이어리</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="no">아니요</string>
    <string name="yes">예</string>
    <string name="image_not_found">이미지를 찾을 수 없습니다.</string>
    <string name="search">검색</string>
    <string name="diary_not_found">다이어리를 찾지 못했습니다.</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="view_larger">크게 보기</string>
    <string name="edit">편집</string>
    <string name="set_category">카테고리 설정</string>
    <string name="export">내보내기</string>
    <string name="album">앨범</string>
    <string name="bold">Bold</string>
    <string name="camera">카메라</string>
    <string name="failed_to_open_editor">에디터를 열지 못했습니다.</string>
    <string name="failed_to_save_image">이미지를 저장하지 못했습니다.</string>
    <string name="google_photos">Google 포토</string>
    <string name="italic">Italic</string>
    <string name="music">음악</string>
    <string name="new_diary">새 다이어리</string>
    <string name="photo">사진</string>
    <string name="photo_shoot">사진 촬영</string>
    <string name="title">제목</string>
    <string name="today_story">오늘의 이야기</string>
    <string name="video">동영상</string>
    <string name="audio">오디오</string>
    <string name="drawing">그리기</string>
    <string name="text">텍스트</string>
    <string name="tag">태그</string>
    <string name="dropdown">Dropdown</string>
    <string name="voice_recording">음성 녹음</string>
    <string name="mic">마이크</string>
    <string name="media">Media</string>
    <string name="select_album">앨범 선택</string>
    <string name="set_text_color">Set text color</string>
    <string name="text_align_center">가운데 정렬</string>
    <string name="text_align_left">왼쪽 정렬</string>
    <string name="text_align_right">오른쪽 정렬</string>
    <string name="underline">Underline</string>
    <string-array name="fonts">
        <item>쿠키런</item> 
        <item>나눔바른고딕</item>  
        <item>나눔바른펜</item>  
        <item>나눔손글씨 붓</item>  
        <item>나눔고딕</item>  
        <item>나눔명조</item>  
        <item>나눔손글씨 펜</item>  
        <item>나눔스퀘어</item>  
        <item>나눔스퀘어라운드</item>  
    </string-array>
    <string name="save_diary_title">다이어리 저장</string>
    <string name="save_diary_message">다이어리를 저장하시겠습니까?</string>
    <string name="save_edited_diary_message">변경된 내용을 저장하시겠습니까?</string>
    <string name="input_hash_tag">해시태그 입력</string>
    <string name="diary">다이어리</string>
    <string name="close">Close</string>
    <string name="delete">삭제</string>
    <string name="permission_request">권한 요청</string>
    <string name="redo">Redo</string>
    <string name="save">저장</string>
    <string name="save_image_dialog_fragment_message">편집된 이미지를 저장하시겠습니까?</string>
    <string name="save_image_dialog_fragment_title">이미지 저장</string>
    <string name="undo">Undo</string>
    <string name="write_external_storage_permission_request_message">저장공간 권한이 필요한 작업입니다. \n권한을 허용하시겠습니까?</string>
    <string name="editing_tool_brush">브러시</string>
    <string name="editing_tool_crop">자르기</string>
    <string name="editing_tool_emoji">이모티콘</string>
    <string name="editing_tool_eraser">지우개</string>
    <string name="editing_tool_filter">필터</string>
    <string name="editing_tool_sticker">스티커</string>
    <string name="editing_tool_text">텍스트</string>
    <string name="done">Done</string>
    <string name="edit_photo">사진 편집</string>
    <string name="editing_tool_icon">Tool icon</string>
    <string name="filter">Filter</string>
    <string name="opacity">불투명도</string>
    <string name="size">크기</string>
    <string name="select_text_color">텍스트 색상 선택</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="circle_square">CIRCLE SQUARE</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="select_color">색상 선택</string>
    <string name="failed_to_load_audio">오디오 파일을 로드하지 못했습니다.</string>
    <string name="failed_to_load_image">이미지를 로드하지 못했습니다.</string>
    <string name="failed_to_load_video">비디오를 로드하지 못했습니다.</string>
    <string name="view_mode">보기 모드</string>
    <string name="sorting">정렬</string>
    <string name="list">리스트</string>
    <string name="brief_view">간단히 보기</string>
    <string name="frame">액자</string>
    <string name="latest">최신순</string>
    <string name="oldest">오래된 순</string>
    <string name="export_text">텍스트 파일로 내보내기</string>
    <string name="text_file_created">텍스트 파일을 생성했습니다.</string>
    <string name="failed_to_create_text_file">텍스트 파일을 생성하지 못했습니다.</string>
    <string name="text_file_name_input_message">텍스트 파일 이름을 입력하세요.</string>
    <string name="pdf_preview">PDF 미리보기</string>
    <string name="export_pdf">PDF 내보내기</string>
    <string name="export_pdf_file">PDF 파일로 내보내기</string>
    <string name="pdf_file_name_input_message">PDF 파일 이름을 입력하세요.</string>
    <string name="failed_to_create_pdf_file">PDF 파일을 생성하지 못했습니다.</string>
    <string name="pdf_file_created">PDF 파일을 생성했습니다.</string>
    <string name="share_diary">다이어리 공유하기</string>
    <string name="photo_not_found">사진을 찾을 수 없습니다.</string>
    <string name="video_not_found">비디오을 찾을 수 없습니다.</string>
    <string name="audio_not_found">오디오를 찾을 수 없습니다.</string>
    <string name="media_not_found">미디어를 찾을 수 없습니다.</string>
    <string name="select_photos">사진 선택</string>
    <string name="select_video">비디오 선택</string>
    <string name="select_audio">오디오 선택</string>
    <string name="select_media">미디어 선택</string>
    <string name="select_all">모두 선택</string>
    <string name="no_picture_is_selected">선택된 사진이 없습니다.</string>
    <string name="send_diary_to_kakao_talk">카카오톡으로 보내기</string>
    <string name="kakao_talk_send_images">이미지 보내기</string>
    <string name="kakao_talk_send_video">비디오 보내기</string>
    <string name="kakao_talk_send_audio">오디오 보내기</string>
    <string name="kakao_talk_send_text">텍스트 보내기</string>
    <string name="kakao_talk_not_found">카카오톡을 찾을 수 없습니다.</string>
    <string name="send_diary_to_facebook">페이스북으로 보내기</string>
    <string name="facebook_send_media">미디어 보내기</string>
    <string name="facebook_send_text">텍스트 보내기</string>
    <string name="facebook_not_found">페이스북을 찾을 수 없습니다.</string>
    <string name="you_can_select_up_to_six">최대 6개까지 선택할 수 있습니다.</string>
    <string-array name="weatherWords">
        <item>흐림</item> 
        <item>구름조금</item>  
        <item>천둥번개</item>  
        <item>천둥번개, 구름</item>  
        <item>맑음</item>  
        <item>비</item>  
        <item>비, 구름</item>  
        <item>무지개</item>  
        <item>눈</item>  
        <item>눈, 구름</item>  
        <item>맑음</item>  
    </string-array>
    <string name="default_notification_content">오늘의 이야기를 기록하세요.</string>
    <string name="calendar">달력</string>
    <string name="anniversary">기념일</string>
    <string name="edit_anniversary">기념일 수정</string>
    <string name="today">오늘</string>
    <string name="please_enter_anniversary_name">기념일 이름을 입력하세요.</string>
    <string name="annual_anniversary">매년 기념일</string>
    <string name="anniversary_registration">기념일 등록</string>
    <string name="no_selected_date">선택된 날짜가 없습니다.</string>
    <string name="delete_anniversary_title">기념일 삭제</string>
    <string name="delete_anniversary_message">기념일을 삭제하시겠습니까?</string>
    <string name="confirm_date_title">날짜 변경</string>
    <string name="confirm_date_message">선택한 날짜에 다이어리를 작성하시겠습니까?</string>
    <string name="no_registered_diaries">등록된 다이어리가 없습니다.</string>
    <string name="facebook_app_id">390282592409873</string>
    <string name="change_theme">테마 변경</string>
    <string name="set_lock_screen">잠금 설정</string>
    <string name="change_theme_color">테마 색상 변경</string>
    <string name="change_theme_color_message">메인 테마 색상을 변경합니다.</string>
    <string name="night_mode">야간 모드</string>
    <string name="failed_to_choose_color">색상을 선택하지 못했습니다.</string>
    <string name="system_night_mode">시스템 야간 모드</string>
    <string name="battery_saver_mode">배터리 세이버 모드</string>
    <string name="system_night_mode_message">시스템의 야간 모드 설정을 따릅니다.</string>
    <string name="battery_saver_mode_message">배터리 상태에 따라 야간 모드가 설정됩니다.</string>
    <string name="lock_screen_set">잠금 화면이 설정되었습니다.</string>
    <string name="change_lock_screen_password">비밀번호 변경</string>
    <string name="set_up_security_questions">보안질문 설정</string>
    <string name="initialize_lock_screen_password">비밀번호 초기화</string>
    <string name="lock_screen_password_initialized">비밀번호가 초기화되었습니다.</string>
    <string name="passwords_do_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="fingerprint_authorization_failed">지문인증에 실패했습니다.</string>
    <string name="no_password_set">설정된 비밀번호가 없습니다.</string>
    <string name="please_enter_your_existing_password">기존 비밀번호를 입력하세요.</string>
    <string name="please_enter_a_new_password">새 비밀번호를 입력하세요.</string>
    <string name="please_enter_a_password">비밀번호를 입력하세요.</string>
    <string name="password_changed">비밀번호가 변경되었습니다.</string>
    <string name="forgot_your_password">비밀번호 찾기</string>
    <string name="answer">답</string>
    <string name="enter_your_answer">답을 입력하세요.</string>
    <string-array name="security_questions">
        <item>고등학교에서 가장 친한 친구의 이름은 무엇입니까?</item>
        <item>첫번째 애완 동물의 이름은 무엇이였습니까?</item>
        <item>가장 먼저 배운 요리는 무엇입니까?</item>
        <item>처음 비행기를 탔을 때 어디로 갔습니까?</item>
        <item>가장 좋아하는 초등학교 선생님의 성은 무엇입니까?</item>
    </string-array>
    <string name="enter_your_security_question_answer">보안질문 답을 입력하세요.</string>
    <string name="security_question_is_not_set">보안질문이 설정되지 않았습니다.</string>
    <string name="security_question_set">보안질문이 설정되었습니다.</string>
    <string name="security_question_do_not_match">보안질문이 일치하지 않습니다.</string>
    <string name="find_by_security_question">보안질문으로 찾기</string>
    <string name="backup_information">백업 정보</string>
    <string name="google_drive_backup_information">구글 드라이브 백업 정보</string>
    <string name="backup_account">백업 계정</string>
    <string name="google_drive">구글 드라이브</string>
    <string name="data_backup">데이터 백업</string>
    <string name="restore_data">데이터 복원</string>
    <string name="backup_notification">백업 알림</string>
    <string name="internal_storage">내부 저장소</string>
    <string name="backup_to_internal_storage">내부 저장소로 백업</string>
    <string name="restore_from_internal_storage">내부 저장소에서 복원</string>
    <string name="auto_backup">자동 백업</string>
    <string name="failed_to_restore_data_backup_file">데이터 백업 파일을 복원하지 못했습니다.</string>
    <string name="data_backup_file_not_found">데이터 백업 파일을 찾지 못했습니다.</string>
    <string name="data_backed_up">데이터를 백업했습니다.</string>
    <string name="backup_data_restored">백업 데이터를 복원했습니다.</string>
    <string name="data_backup_failed">데이터 백업에 실패했습니다.</string>
    <string name="data_restored">데이터가 복원되었습니다.</string>
    <string name="data_restore_failed">데이터를 복원하지 못했습니다.</string>
    <string name="google_sign_in_failed">구글 로그인에 실패했습니다.</string>
    <string name="settings">설정</string>
    <string name="snackbar_on_denied_message_storage">데이터를 백업 및 복원하려면 저장공간 권한이 필요합니다.\n설정에서 저장공간 권한을 허용하세요.</string>
    <string name="data_backup_message">데이터를 백업합니다.</string>
    <string name="data_restore_message">데이터를 복원하면 현재 데이터는 모두 삭제됩니다. \n계속하시겠습니까?</string>
    <string name="last_backup_date">마지막 백업 일자</string>
    <string name="last_backup_device">마지막 백업 기기</string>
    <string name="backed_up_diary_count">백업된 다이어리 수</string>
    <string name="reminder_settings">리마인더 설정</string>
    <string name="set_reminder">리마인더 설정</string>
    <string name="reminder_time">리마인더 시간</string>
    <string name="reminder_message">리마인더 메시지</string>
    <string name="reminder_default_message">오늘의 이야기를 들려주세요. :)</string>
    <string name="folder">폴더</string>
    <string name="add_folder">폴더 추가</string>
    <string name="no_folder">폴더가 없습니다.</string>
</resources>