<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_fragment_photo_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="?attr/actionBarSize" />

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photoEditorView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_editing_tool"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_undo"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSemiBlackTransparent"
            android:contentDescription="@string/undo"
            android:padding="8dp"
            android:src="@drawable/ic_sharp_undo_24"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_editing_tool"
            app:layout_constraintEnd_toStartOf="@+id/image_redo" />

        <ImageView
            android:id="@+id/image_redo"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSemiBlackTransparent"
            android:contentDescription="@string/redo"
            android:padding="8dp"
            android:src="@drawable/ic_sharp_redo_24"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_editing_tool"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_sharp_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <ImageView
            android:id="@+id/image_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_sharp_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_editing_tool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorToolBackground"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_filter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorToolBackground"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_editing_tool"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recycler_view_editing_tool" />

        <TextView
            android:id="@+id/text_current_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:singleLine="true"
            android:text="@string/edit_photo"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>